--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,4 +10,46 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="tech.milind.cleanwatercrowdsourcing.LoginAcitivity">
 
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:layout_below="@+id/editTextUsername"
+        android:layout_alignStart="@+id/editTextUsername"
+        android:layout_marginTop="78dp"
+        android:id="@+id/editTextPassword"
+        android:hint="@string/password" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:layout_marginTop="68dp"
+        android:id="@+id/editTextUsername"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:hint="@string/username" />
+
+    <Button
+        android:text="@string/login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="68dp"
+        android:id="@+id/buttonSignIn"
+        android:onClick="onSignInPressed"
+        android:layout_marginStart="45dp"
+        android:layout_below="@+id/editTextPassword"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="@string/cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonCancel"
+        android:onClick="onCancelPressed"
+        android:layout_marginEnd="41dp"
+        android:layout_alignBottom="@+id/buttonSignIn"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
