--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -15,11 +15,11 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:layout_below="@+id/editText"
-        android:layout_alignStart="@+id/editText"
+        android:layout_below="@+id/editTextUsername"
+        android:layout_alignStart="@+id/editTextUsername"
         android:layout_marginTop="78dp"
         android:id="@+id/editTextPassword"
-        android:hint="Password" />
+        android:hint="@string/password" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -27,8 +27,29 @@
         android:inputType="textPersonName"
         android:ems="10"
         android:layout_marginTop="68dp"
-        android:id="@+id/editText"
+        android:id="@+id/editTextUsername"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:hint="Username" />
+        android:hint="@string/username" />
+
+    <Button
+        android:text="@string/register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="68dp"
+        android:id="@+id/buttonRegister"
+        android:onClick="onRegisterPressed"
+        android:layout_marginStart="45dp"
+        android:layout_below="@+id/editTextPassword"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="@string/cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonCancel"
+        android:onClick="onCancelPressed"
+        android:layout_marginEnd="41dp"
+        android:layout_alignBottom="@+id/buttonRegister"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
