--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,5 +8,5 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="tech.milind.cleanwatercrowdsourcing.WelcomeActivity">
+    tools:context="tech.milind.cleanwatercrowdsourcing.controllers.WelcomeActivity">
 </RelativeLayout>
