--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
-    tools:context="tech.milind.cleanwatercrowdsourcing.RegistrationActivity">
+    tools:context="tech.milind.cleanwatercrowdsourcing.controllers.RegistrationActivity">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_register_username"
