--- a/app/src/main/res/layout/profile_edit.xml
+++ b/app/src/main/res/layout/profile_edit.xml
@@ -56,9 +56,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:hint="Name"
         android:ems="10"
-        android:id="@+id/editText3"
+        android:id="@+id/edit_name"
         android:layout_below="@+id/textView13"
         android:layout_alignStart="@+id/textView13" />
 
@@ -66,12 +66,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Home Address"
+        android:hint="Home Address"
         android:ems="10"
         android:layout_alignTop="@+id/textView14"
         android:layout_alignStart="@+id/textView14"
         android:layout_marginTop="19dp"
-        android:id="@+id/editText4" />
+        android:id="@+id/edit_home_adress" />
 
     <TextView
         android:text="Title             "
@@ -87,20 +87,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Email Address"
+        android:hint="Email Address"
         android:ems="10"
         android:layout_below="@+id/textView5"
         android:layout_alignStart="@+id/textView5"
-        android:id="@+id/editText5" />
+        android:id="@+id/edit_email_address" />
 
-    <EditText
-        android:layout_width="wrap_content"
+    <Button
+        android:text="Save"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="Title"
-        android:ems="10"
+        android:id="@+id/save_profile"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="58dp"
+        android:layout_alignStart="@+id/editText6"
+        android:layout_toStartOf="@+id/cancel_profile"
+        android:layout_alignEnd="@+id/cancel_profile" />
+
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/textView15"
+        android:layout_marginTop="15dp"
+        android:id="@+id/spinner_user_type"
         android:layout_alignStart="@+id/textView15"
-        android:id="@+id/editText6" />
+        android:layout_alignEnd="@+id/textView" />
 
 </RelativeLayout>
