--- a/app/src/main/res/layout/profile_landing.xml
+++ b/app/src/main/res/layout/profile_landing.xml
@@ -53,12 +53,6 @@
         android:layout_alignStart="@+id/textView2" />
 
     <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView8" />
-
-    <TextView
         android:text="Title:       "
         android:id="@+id/textView3"
         android:layout_height="wrap_content"
@@ -69,33 +63,23 @@
         android:layout_alignStart="@+id/textView5" />
 
     <TextView
-        android:text="Name String Here"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView4"
-        android:layout_toEndOf="@+id/textView8"
-        android:layout_marginTop="14dp"
-        android:id="@+id/textView12"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
-
-    <TextView
         android:text="Home Address String Here"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView2"
-        android:layout_alignStart="@+id/textView9"
+        android:layout_alignStart="@+id/text_user_type"
         android:layout_marginTop="22dp"
-        android:id="@+id/textView11"
+        android:id="@+id/text_home_address"
         android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
     <TextView
         android:text="Email Address String Here"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView10"
+        android:id="@+id/text_email_address"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:layout_below="@+id/textView5"
-        android:layout_alignStart="@+id/textView11"
+        android:layout_alignStart="@+id/text_home_address"
         android:layout_marginTop="20dp" />
 
     <TextView
@@ -103,9 +87,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
-        android:id="@+id/textView9"
+        android:id="@+id/text_user_type"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:layout_below="@+id/textView3"
-        android:layout_alignStart="@+id/textView12" />
+        android:layout_alignStart="@+id/text_name" />
+
+    <TextView
+        android:text="Name String Here"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:id="@+id/text_name"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        android:layout_below="@+id/textView4"
+        android:layout_alignEnd="@+id/textView2" />
 
 </RelativeLayout>
