--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,6 +3,8 @@
     <item
         android:id="@+id/logout"
         android:title="Logout"
-        android:orderInCategory="100"
-        android:showAsAction="always"/>
+        android:orderInCategory="100"/>
+    <item
+        android:id="@+id/profile"
+        android:title="Profile" />
 </menu>
