--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,21 +51,20 @@
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:id="@+id/buttonSignIn"
+        android:id="@+id/buttonLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/input_login_password"
         android:layout_marginStart="45dp"
         android:layout_marginTop="68dp"
-        android:onClick="onSignInPressed"
         android:text="@string/login" />
 
     <Button
         android:id="@+id/buttonCancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/buttonSignIn"
+        android:layout_alignBottom="@+id/buttonLogin"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="41dp"
         android:onClick="onCancelPressed"
