--- a/app/src/main/res/layout/profile_edit.xml
+++ b/app/src/main/res/layout/profile_edit.xml
@@ -2,115 +2,122 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <TextView
-        android:text="User Profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="24dp"
-        android:id="@+id/textView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
-
     <Button
         android:text="Cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="25dp"
         android:id="@+id/cancel_profile" />
 
     <TextView
         android:text="Name"
-        android:id="@+id/textView13"
+        android:id="@+id/text_name"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:layout_marginTop="14dp"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_below="@+id/textView"
-        android:layout_alignStart="@+id/textView14" />
+        android:layout_alignStart="@+id/textView" />
 
     <TextView
         android:text="Home Address:"
-        android:id="@+id/textView14"
+        android:id="@+id/text_home_address"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        android:layout_below="@+id/textView13"
+        android:layout_below="@+id/edit_name"
         android:layout_alignStart="@+id/textView"
-        android:layout_marginTop="47dp" />
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp" />
 
     <TextView
         android:text="Email Address:"
-        android:id="@+id/textView5"
+        android:id="@+id/text_email_address"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        android:layout_marginTop="43dp"
-        android:layout_below="@+id/textView14"
-        android:layout_alignStart="@+id/textView14" />
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/edit_home_adress"
+        android:layout_alignStart="@+id/textView" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:hint="Name"
         android:ems="10"
         android:id="@+id/edit_name"
-        android:layout_below="@+id/textView13"
-        android:layout_alignStart="@+id/textView13" />
+        android:layout_below="@+id/text_name"
+        android:layout_alignStart="@+id/textView"
+        android:layout_alignEnd="@+id/cancel_profile"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"/>
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:hint="Home Address"
         android:ems="10"
-        android:layout_alignTop="@+id/textView14"
-        android:layout_alignStart="@+id/textView14"
-        android:layout_marginTop="19dp"
-        android:id="@+id/edit_home_adress" />
+        android:layout_alignStart="@+id/textView"
+        android:layout_alignEnd="@+id/cancel_profile"
+        android:id="@+id/edit_home_adress"
+        android:layout_below="@id/text_home_address"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp" />
 
     <TextView
-        android:text="Title             "
-        android:id="@+id/textView15"
+        android:text="Title"
+        android:id="@+id/text_title"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        android:layout_marginTop="43dp"
+        android:layout_marginTop="5dp"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_below="@+id/textView5"
-        android:layout_alignStart="@+id/textView5" />
+        android:layout_below="@+id/edit_email_address"
+        android:layout_alignStart="@+id/textView" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:hint="Email Address"
         android:ems="10"
-        android:layout_below="@+id/textView5"
-        android:layout_alignStart="@+id/textView5"
-        android:id="@+id/edit_email_address" />
+        android:layout_below="@+id/text_email_address"
+        android:layout_alignStart="@+id/textView"
+        android:layout_alignEnd="@+id/cancel_profile"
+        android:id="@+id/edit_email_address"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"/>
 
     <Button
         android:text="Save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/save_profile"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="58dp"
-        android:layout_alignStart="@+id/editText6"
-        android:layout_toStartOf="@+id/cancel_profile"
+        android:layout_below="@+id/spinner_user_type"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="15dp"
+        android:layout_alignStart="@+id/textView"
         android:layout_alignEnd="@+id/cancel_profile" />
 
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView15"
-        android:layout_marginTop="15dp"
+        android:layout_below="@+id/text_title"
         android:id="@+id/spinner_user_type"
-        android:layout_alignStart="@+id/textView15"
-        android:layout_alignEnd="@+id/textView" />
+        android:layout_alignStart="@+id/textView"
+        android:layout_alignEnd="@+id/cancel_profile"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"/>
+
+    <TextView
+        android:text="User Profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="23dp"
+        android:id="@+id/textView"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:layout_marginTop="32dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
