--- a/app/src/main/res/layout/profile_landing.xml
+++ b/app/src/main/res/layout/profile_landing.xml
@@ -2,104 +2,114 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <TextView
-        android:text="User Profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="24dp"
-        android:id="@+id/textView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
-
     <Button
         android:text="Edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="16dp"
-        android:id="@+id/edit_button" />
+        android:layout_marginEnd="25dp"
+        android:id="@+id/edit_profile" />
 
     <TextView
-        android:text="Name:"
-        android:layout_marginTop="32dp"
-        android:id="@+id/textView4"
+        android:text="Name"
+        android:id="@+id/text_name"
+        android:textAppearance="@android:style/TextAppearance.Material.Large"
+        android:layout_marginTop="20dp"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_below="@+id/textView"
-        android:layout_alignStart="@+id/textView"
-        android:textAppearance="@android:style/TextAppearance.Material.Large" />
+        android:layout_alignStart="@+id/textView" />
 
     <TextView
         android:text="Home Address:"
-        android:id="@+id/textView2"
+        android:id="@+id/text_home_address"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
-        android:layout_marginTop="61dp"
-        android:layout_below="@+id/textView4"
-        android:layout_alignStart="@+id/textView4" />
+        android:layout_below="@+id/txt_view_name"
+        android:layout_alignStart="@+id/textView"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="5dp" />
 
     <TextView
         android:text="Email Address:"
-        android:id="@+id/textView5"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:textAppearance="@android:style/TextAppearance.Material.Large"
-        android:layout_marginTop="73dp"
-        android:layout_below="@+id/textView2"
-        android:layout_alignStart="@+id/textView2" />
-
-    <TextView
-        android:text="Title:       "
-        android:id="@+id/textView3"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_marginTop="79dp"
-        android:textAppearance="@android:style/TextAppearance.Material.Large"
-        android:layout_below="@+id/textView5"
-        android:layout_alignStart="@+id/textView5" />
-
-    <TextView
-        android:text="Home Address String Here"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:layout_alignStart="@+id/text_user_type"
-        android:layout_marginTop="22dp"
-        android:id="@+id/text_home_address"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
-
-    <TextView
-        android:text="Email Address String Here"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/text_email_address"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        android:layout_below="@+id/textView5"
-        android:layout_alignStart="@+id/text_home_address"
-        android:layout_marginTop="20dp" />
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:textAppearance="@android:style/TextAppearance.Material.Large"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/txt_view_home_address"
+        android:layout_alignStart="@+id/textView" />
 
     <TextView
-        android:text="Title String Here"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
-        android:id="@+id/text_user_type"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        android:layout_below="@+id/textView3"
-        android:layout_alignStart="@+id/text_name" />
+        android:ems="10"
+        android:id="@+id/txt_view_name"
+        android:layout_below="@+id/text_name"
+        android:layout_alignStart="@+id/textView"
+        android:layout_alignEnd="@+id/edit_profile"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="15dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
     <TextView
-        android:text="Name String Here"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:layout_alignStart="@+id/textView"
+        android:layout_alignEnd="@+id/edit_profile"
+        android:id="@+id/txt_view_home_address"
+        android:layout_below="@id/text_home_address"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="15dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+    <TextView
+        android:text="Title"
+        android:id="@+id/text_title"
+        android:textAppearance="@android:style/TextAppearance.Material.Large"
+        android:layout_marginTop="20dp"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_below="@+id/txt_view_email_address"
+        android:layout_alignStart="@+id/textView" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:layout_below="@+id/text_email_address"
+        android:layout_alignStart="@+id/textView"
+        android:layout_alignEnd="@+id/edit_profile"
+        android:id="@+id/txt_view_email_address"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="15dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/text_title"
+        android:id="@+id/txt_view_user_type"
+        android:layout_alignStart="@+id/textView"
+        android:layout_alignEnd="@+id/edit_profile"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textAlignment="textStart" />
+
+    <TextView
+        android:text="User Profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:id="@+id/text_name"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        android:layout_below="@+id/textView4"
-        android:layout_alignEnd="@+id/textView2" />
+        android:layout_marginStart="23dp"
+        android:id="@+id/textView"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:layout_marginTop="32dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
