--- a/app/src/main/res/layout/activity_submit_source_report.xml
+++ b/app/src/main/res/layout/activity_submit_source_report.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:descendantFocusability="beforeDescendants"
-    android:focusableInTouchMode="true">
+    android:focusableInTouchMode="true"
+    android:id="@+id/activity_submit_source_report">
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
