--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,27 +8,13 @@
     android:layout_height="match_parent"
     tools:context="tech.milind.cleanwatercrowdsourcing.controllers.WelcomeActivity">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/nav_bar"
-        android:layout_alignParentTop="true"
-        tools:context="com.example.mapwithmarker.MapsMarkerActivity" />
+        android:id="@+id/fragmentContainer"
+        android:layout_above="@+id/nav_bar"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/addFAB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/map"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="19dp"
-        android:layout_marginEnd="16dp"
-        android:clickable="true"
-        app:fabSize="mini"
-        app:srcCompat="@mipmap/ic_add_white_24dp" />
+
 
     <android.support.design.widget.BottomNavigationView
         android:layout_width="match_parent"
