Cleaned RecyclerView and fixed Titles.

--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -6,8 +6,7 @@
     android:name="lab3.cs2340.gatech.edu.lab3.CourseDetailFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
+    android:padding="4dp"
     app:layoutManager="LinearLayoutManager"
     tools:context="tech.milind.cleanwatercrowdsourcing.controllers.ListSourceFragment"
     tools:listitem="@layout/source_list_content" />
