--- a/app/src/main/res/layout/source_list_content.xml
+++ b/app/src/main/res/layout/source_list_content.xml
@@ -1,37 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_marginTop="2dp"
+    android:layout_marginBottom="2dp"
+    >
+<LinearLayout
     android:orientation="vertical" android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-    <LinearLayout
+    android:layout_height="wrap_content"
+    android:padding="4dp">
+    <!---->
+    <RelativeLayout
         android:orientation="horizontal" android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/reportName"
-            android:layout_gravity="start"
+            android:id="@+id/reportNumAndName"
+            android:layout_alignParentLeft="true"
             android:textAppearance="?attr/textAppearanceListItem"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:id="@+id/reportNumAndDate"
+            android:id="@+id/reportDate"
+            android:layout_alignParentRight="true"
             android:textAppearance="?attr/textAppearanceListItem"/>
-    </LinearLayout>
+    </RelativeLayout>
 
-    <LinearLayout
+    <!--<RelativeLayout
         android:orientation="horizontal" android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/reportLocation"
-            android:textAppearance="?attr/textAppearanceListItem"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/reportTypeCondition"
-            android:textAppearance="?attr/textAppearanceListItem"/>
-    </LinearLayout>
-
+    </RelativeLayout>-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/reportLocation"
+        android:layout_alignParentLeft="true"
+        android:textAppearance="?attr/textAppearanceListItem"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/reportTypeCondition"
+        android:textAppearance="?attr/textAppearanceListItem"/>
+    <!---->
 </LinearLayout>
+</android.support.v7.widget.CardView>
