--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -1,12 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/source_report_list"
-    android:name="lab3.cs2340.gatech.edu.lab3.CourseDetailFragment"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="4dp"
-    app:layoutManager="LinearLayoutManager"
-    tools:context="tech.milind.cleanwatercrowdsourcing.controllers.ListSourceFragment"
-    tools:listitem="@layout/source_list_content" />
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <android.support.v7.widget.RecyclerView
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/source_report_list"
+        android:name="lab3.cs2340.gatech.edu.lab3.CourseDetailFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="4dp"
+        app:layoutManager="LinearLayoutManager"
+        tools:context="tech.milind.cleanwatercrowdsourcing.controllers.ListSourceFragment"
+        tools:listitem="@layout/source_list_content" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/addFAB"
+        app:fabSize="mini"
+        app:srcCompat="@mipmap/ic_add_white_24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/source_report_list"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="19dp"
+        android:layout_marginEnd="16dp"
+        android:clickable="true" />
+</RelativeLayout>
