--- a/app/src/main/res/layout/fragment_quality.xml
+++ b/app/src/main/res/layout/fragment_quality.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:padding="4dp"
         app:layoutManager="LinearLayoutManager"
-        tools:context="tech.milind.cleanwatercrowdsourcing.controllers.FragmentPurity"
+        tools:context="tech.milind.cleanwatercrowdsourcing.controllers.FragmentQuality"
         tools:listitem="@layout/purity_list_content" />
 
     <android.support.design.widget.FloatingActionButton
