--- a/app/src/main/res/layout/profile_edit.xml
+++ b/app/src/main/res/layout/profile_edit.xml
@@ -79,7 +79,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         android:ems="10"
         android:layout_below="@+id/text_email_address"
         android:layout_alignStart="@+id/textView"
