--- a/app/src/main/res/layout/activity_edit_quality_report.xml
+++ b/app/src/main/res/layout/activity_edit_quality_report.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="wrap_content" android:layout_height="wrap_content">
     <RelativeLayout
-        android:layout_width="match_parent" android:layout_height="match_parent"
+        android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:descendantFocusability="beforeDescendants"
         android:focusableInTouchMode="true"
         android:id="@+id/activity_edit_quality_report">
@@ -89,7 +89,8 @@
             android:layout_below="@+id/textViewVirusPurityReportEdit"
             android:layout_marginRight="60dp"
             android:layout_alignParentStart="true"
-            android:id="@+id/textInputLayoutPurity3Edit">
+            android:id="@+id/textInputLayoutPurity3Edit"
+            android:labelFor="@id/virusPurityReportEditTextEdit">
 
             <EditText
                 android:id="@+id/virusPurityReportEditTextEdit"
@@ -116,7 +117,8 @@
             android:layout_below="@+id/textViewContamPurityReportEdit"
             android:layout_marginRight="60dp"
             android:layout_alignParentStart="true"
-            android:id="@+id/textInputLayoutPurity4Edit">
+            android:id="@+id/textInputLayoutPurity4Edit"
+            android:labelFor="@id/contamPurityReportEditTextEdit">
 
             <EditText
                 android:id="@+id/contamPurityReportEditTextEdit"
