--- a/app/src/main/res/layout/activity_edit_historical_report.xml
+++ b/app/src/main/res/layout/activity_edit_historical_report.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:hint="Location"
+            android:hint="@string/location"
             android:inputType="none" />
     </android.support.design.widget.TextInputLayout>
 
@@ -49,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:hint="Radius"
+            android:hint="@string/radius"
             android:inputType="number" />
     </android.support.design.widget.TextInputLayout>
 
@@ -67,7 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:hint="Year"
+            android:hint="@string/year"
             android:inputType="number" />
     </android.support.design.widget.TextInputLayout>
     <TextView
@@ -77,7 +77,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="25dp"
         android:layout_below="@id/textInputLayoutYear"
-        android:text="Select Purity Type"/>
+        android:text="@string/select_purity_type"/>
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -91,13 +91,13 @@
             android:id="@+id/rbVirus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Virus PPM"/>
+            android:text="@string/virus_ppm"/>
 
         <RadioButton
             android:id="@+id/rbContaminant"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Contaminant PPM"/>
+            android:text="@string/contaminant_ppm"/>
 
     </RadioGroup>
 
@@ -108,7 +108,7 @@
         android:layout_marginTop="20dp"
         android:layout_centerInParent="true"
         android:layout_below="@id/HistRadioGroup"
-        android:text="Create Graph"/>
+        android:text="@string/create_graph"/>
 
 
 </RelativeLayout>
