--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/logout"
-        android:title="Logout"
+        android:title="@string/logout"
         android:orderInCategory="100"/>
     <item
         android:id="@+id/profile"
-        android:title="Profile" />
+        android:title="@string/profile" />
 </menu>
