--- a/app/src/main/res/menu/navbar_user.xml
+++ b/app/src/main/res/menu/navbar_user.xml
@@ -7,7 +7,7 @@
         android:id="@+id/nav_home"
         android:enabled="true"
         android:icon="@mipmap/ic_home_white_24dp"
-        android:title="Home"
+        android:title="@string/home"
         app:showAsAction="always" />
     <item
         android:title=""/>
