--- a/app/src/main/res/menu/navbar_worker.xml
+++ b/app/src/main/res/menu/navbar_worker.xml
@@ -5,7 +5,7 @@
         android:id="@+id/nav_home"
         android:enabled="true"
         android:icon="@mipmap/ic_home_white_24dp"
-        android:title="Home"
+        android:title="@string/home"
         app:showAsAction="always" />
 
     <item
@@ -19,7 +19,7 @@
         android:id="@+id/nav_purity"
         android:enabled="true"
         android:icon="@mipmap/ic_purity"
-        android:title="Purity"
+        android:title="@string/purity"
         app:showAsAction="always" />
 
 </menu>
