--- a/app/src/main/res/layout/activity_submit_purity_report.xml
+++ b/app/src/main/res/layout/activity_submit_purity_report.xml
@@ -89,8 +89,7 @@ android:id="@+id/activity_submit_purity_report">
     android:layout_below="@+id/textViewVirusPurityReport"
     android:layout_marginRight="60dp"
     android:layout_alignParentStart="true"
-    android:id="@+id/textInputLayoutPurity3"
-    android:labelFor="@id/virusPurityReportEditText">
+    android:id="@+id/textInputLayoutPurity3">
 
     <EditText
         android:id="@+id/virusPurityReportEditText"
@@ -117,8 +116,7 @@ android:id="@+id/activity_submit_purity_report">
     android:layout_below="@+id/textViewContamPurityReport"
     android:layout_marginRight="60dp"
     android:layout_alignParentStart="true"
-    android:id="@+id/textInputLayoutPurity4"
-    android:labelFor="@id/contamPurityReportEditText">
+    android:id="@+id/textInputLayoutPurity4">
 
     <EditText
         android:id="@+id/contamPurityReportEditText"
